--- a/06.帳票WEB API(旧式WCF+SOAP)－クラウド連携中/VB/ClientForm/ClientForm.vbproj
+++ b/06.帳票WEB API(旧式WCF+SOAP)－クラウド連携中/VB/ClientForm/ClientForm.vbproj
@@ -77,9 +77,14 @@
     <Import Include="System.Linq" />
     <Import Include="System.Xml.Linq" />
     <Import Include="System.Threading.Tasks" />
-    <Reference Include="Pao.Reports">
+    <Reference Include="Pao.Reports" Condition="!Exists('$(ProgramFiles)\Pao@Office\Reports.net\Pao.Reports.dll') And !Exists('$(ProgramFiles(x86))\Pao@Office\Reports.net\Pao.Reports.dll')">
       <Name>Pao.Reports</Name>
       <HintPath>$(SolutionDir)..\..\lib\Pao.Reports.dll</HintPath>
+    </Reference>
+    <Reference Include="Pao.Reports">
+      <Name>Pao.Reports</Name>
+      <HintPath Condition="Exists('$(ProgramFiles)')">$(ProgramFiles)\Pao@Office\Reports.net\Pao.Reports.dll</HintPath>
+      <HintPath Condition="Exists('$(ProgramFiles) (x86)')">$(ProgramFiles) (x86)\Pao@Office\Reports.net\Pao.Reports.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
