--- a/02.実践帳票サンプル集－様々な帳票手法/VB/WinForm/WinForm.vbproj
+++ b/02.実践帳票サンプル集－様々な帳票手法/VB/WinForm/WinForm.vbproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <MyType>WindowsForms</MyType>
@@ -85,9 +85,14 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Pao.Reports">
+    <Reference Include="Pao.Reports" Condition="!Exists('$(ProgramFiles)\Pao@Office\Reports.net\Pao.Reports.dll') And !Exists('$(ProgramFiles(x86))\Pao@Office\Reports.net\Pao.Reports.dll')">
       <Name>Pao.Reports</Name>
       <HintPath>$(SolutionDir)..\..\lib\Pao.Reports.dll</HintPath>
+    </Reference>
+    <Reference Include="Pao.Reports">
+      <Name>Pao.Reports</Name>
+      <HintPath Condition="Exists('$(ProgramFiles)')">$(ProgramFiles)\Pao@Office\Reports.net\Pao.Reports.dll</HintPath>
+      <HintPath Condition="Exists('$(ProgramFiles) (x86)')">$(ProgramFiles) (x86)\Pao@Office\Reports.net\Pao.Reports.dll</HintPath>
       <AssemblyFolderKey>hkcu\dn\pao%40office</AssemblyFolderKey>
     </Reference>
     <Reference Include="System">
