--- a/04.帳票WEB API(REST API)－クラウド連携中/CS/ClientWpf/ClientWpf.csproj
+++ b/04.帳票WEB API(REST API)－クラウド連携中/CS/ClientWpf/ClientWpf.csproj
@@ -35,8 +35,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Pao.Reports">
+    <Reference Include="Pao.Reports" Condition="!Exists('$(ProgramFiles)\Pao@Office\Reports.net\Pao.Reports.dll') And !Exists('$(ProgramFiles(x86))\Pao@Office\Reports.net\Pao.Reports.dll')">
+      <Name>Pao.Reports</Name>
       <HintPath>$(SolutionDir)..\..\lib\Pao.Reports.dll</HintPath>
+    </Reference>
+    <Reference Include="Pao.Reports">
+      <HintPath Condition="Exists('$(ProgramFiles)')">$(ProgramFiles)\Pao@Office\Reports.net\Pao.Reports.dll</HintPath>
+      <HintPath Condition="Exists('$(ProgramFiles) (x86)')">$(ProgramFiles) (x86)\Pao@Office\Reports.net\Pao.Reports.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
