--- a/05.帳票WEBアプリ(旧式WebForms)－クラウド公開中/VB/Programes/Reports.net.Sample.WebSite.vbproj
+++ b/05.帳票WEBアプリ(旧式WebForms)－クラウド公開中/VB/Programes/Reports.net.Sample.WebSite.vbproj
@@ -77,8 +77,13 @@
     <Reference Include="Microsoft.Web.Infrastructure">
       <HintPath>..\..\Resource\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
-    <Reference Include="Pao.Reports.Azure">
+    <Reference Include="Pao.Reports.Azure" Condition="!Exists('$(ProgramFiles)\Pao@Office\Reports.net\Pao.Reports.Azure.dll') And !Exists('$(ProgramFiles(x86))\Pao@Office\Reports.net\Pao.Reports.Azure.dll')">
+      <Name>Pao.Reports.Azure</Name>
       <HintPath>$(SolutionDir)..\..\lib\Pao.Reports.Azure.dll</HintPath>
+    </Reference>
+    <Reference Include="Pao.Reports.Azure">
+      <HintPath Condition="Exists('$(ProgramFiles)')">$(ProgramFiles)\Pao@Office\Reports.net\Pao.Reports.Azure.dll</HintPath>
+      <HintPath Condition="Exists('$(ProgramFiles) (x86)')">$(ProgramFiles) (x86)\Pao@Office\Reports.net\Pao.Reports.Azure.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
