--- a/01.簡単なサンプル－あっという間に帳票出力/CS/WPF/WPF.csproj
+++ b/01.簡単なサンプル－あっという間に帳票出力/CS/WPF/WPF.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -54,12 +54,11 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="WindowsFormsIntegration" />
     <!-- Reports.net 本体 -->
-    <Reference Include="Pao.Reports" Condition="!Exists('$(ProgramFiles)\Pao@Office\Reports.net\Pao.Reports.dll') And !Exists('$(ProgramFiles(x86))\Pao@Office\Reports.net\Pao.Reports.dll')">
-      <Name>Pao.Reports</Name>
-      <HintPath>$(SolutionDir)..\..\lib\Pao.Reports.dll</HintPath>
-    </Reference>
-    <Reference Include="Pao.Reports">
-      <HintPath Condition="Exists('$(ProgramFiles)')">$(ProgramFiles)\Pao@Office\Reports.net\Pao.Reports.dll</HintPath>
+    <Reference Include="Pao.Reports" Condition="!Exists('$(ProgramFiles) (x86)\Pao@Office\Reports.net\Pao.Reports.dll') And Exists('$(SolutionDir)..\..\lib\Pao.Reports.dll') ">
+  <Name>Pao.Reports</Name>
+  <HintPath>$(SolutionDir)..\..\lib\Pao.Reports.dll</HintPath>
+</Reference>
+<Reference Include="Pao.Reports" Condition="Exists('$(ProgramFiles) (x86)\Pao@Office\Reports.net\Pao.Reports.dll')">
       <HintPath Condition="Exists('$(ProgramFiles) (x86)')">$(ProgramFiles) (x86)\Pao@Office\Reports.net\Pao.Reports.dll</HintPath>
     </Reference>
   </ItemGroup>
