--- a/01.簡単なサンプル－あっという間に帳票出力/VB/WPF/WPF.vbproj
+++ b/01.簡単なサンプル－あっという間に帳票出力/VB/WPF/WPF.vbproj
@@ -24,11 +24,11 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="Pao.Reports" Condition="!Exists('$(ProgramFiles)\Pao@Office\Reports.net\Pao.Reports.dll') And !Exists('$(ProgramFiles(x86))\Pao@Office\Reports.net\Pao.Reports.dll')">
-      <Name>Pao.Reports</Name>
-      <HintPath>$(SolutionDir)..\..\lib\Pao.Reports.dll</HintPath>
-    </Reference>
-    <Reference Include="Pao.Reports">
+    <Reference Include="Pao.Reports" Condition="!Exists('$(ProgramFiles) (x86)\Pao@Office\Reports.net\Pao.Reports.dll') And Exists('$(SolutionDir)..\..\lib\Pao.Reports.dll') ">
+  <Name>Pao.Reports</Name>
+  <HintPath>$(SolutionDir)..\..\lib\Pao.Reports.dll</HintPath>
+</Reference>
+<Reference Include="Pao.Reports" Condition="Exists('$(ProgramFiles) (x86)\Pao@Office\Reports.net\Pao.Reports.dll')">
       <HintPath>$(ProgramFiles)\Pao@Office\Reports.net\Pao.Reports.dll</HintPath>
       <HintPath Condition="Exists('$(ProgramFiles) (x86)\Pao@Office\Reports.net\Pao.Reports.dll')">$(ProgramFiles) (x86)\Pao@Office\Reports.net\Pao.Reports.dll</HintPath>
     </Reference>
