--- a/03.帳票WEBアプリ(MVC)－クラウド公開中/VB/WebApplication/WebApplication.vbproj
+++ b/03.帳票WEBアプリ(MVC)－クラウド公開中/VB/WebApplication/WebApplication.vbproj
@@ -50,12 +50,11 @@
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Pao.Reports.Azure" Condition="!Exists('$(ProgramFiles)\Pao@Office\Reports.net\Pao.Reports.Azure.dll') And !Exists('$(ProgramFiles(x86))\Pao@Office\Reports.net\Pao.Reports.Azure.dll')">
-      <Name>Pao.Reports.Azure</Name>
-      <HintPath>$(SolutionDir)..\..\lib\Pao.Reports.Azure.dll</HintPath>
-    </Reference>
-    <Reference Include="Pao.Reports.Azure">
-      <HintPath Condition="Exists('$(ProgramFiles)')">$(ProgramFiles)\Pao@Office\Reports.net\Pao.Reports.Azure.dll</HintPath>
+    <Reference Include="Pao.Reports.Azure" Condition="!Exists('$(ProgramFiles) (x86)\Pao@Office\Reports.net\Pao.Reports.Azure.dll') And Exists('$(SolutionDir)..\..\lib\Pao.Reports.Azure.dll') ">
+  <Name>Pao.Reports.Azure</Name>
+  <HintPath>$(SolutionDir)..\..\lib\Pao.Reports.Azure.dll</HintPath>
+</Reference>
+<Reference Include="Pao.Reports.Azure" Condition="Exists('$(ProgramFiles) (x86)\Pao@Office\Reports.net\Pao.Reports.Azure.dll')">
       <HintPath Condition="Exists('$(ProgramFiles) (x86)')">$(ProgramFiles) (x86)\Pao@Office\Reports.net\Pao.Reports.Azure.dll</HintPath>
     </Reference>
     <Reference Include="System" />
