--- a/06.帳票WEB API(旧式WCF+SOAP)－クラウド連携中/CS/SoapService/SoapService.csproj
+++ b/06.帳票WEB API(旧式WCF+SOAP)－クラウド連携中/CS/SoapService/SoapService.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -58,12 +58,11 @@
     <Reference Include="Microsoft.WindowsAzure.ServiceRuntime, Version=2.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
       <Private>False</Private>
     </Reference>
-    <Reference Include="Pao.Reports.Azure" Condition="!Exists('$(ProgramFiles)\Pao@Office\Reports.net\Pao.Reports.Azure.dll') And !Exists('$(ProgramFiles(x86))\Pao@Office\Reports.net\Pao.Reports.Azure.dll')">
-      <Name>Pao.Reports.Azure</Name>
-      <HintPath>$(SolutionDir)..\..\lib\Pao.Reports.Azure.dll</HintPath>
-    </Reference>
-    <Reference Include="Pao.Reports.Azure">
-      <HintPath Condition="Exists('$(ProgramFiles)')">$(ProgramFiles)\Pao@Office\Reports.net\Pao.Reports.Azure.dll</HintPath>
+    <Reference Include="Pao.Reports.Azure" Condition="!Exists('$(ProgramFiles) (x86)\Pao@Office\Reports.net\Pao.Reports.Azure.dll') And Exists('$(SolutionDir)..\..\lib\Pao.Reports.Azure.dll') ">
+  <Name>Pao.Reports.Azure</Name>
+  <HintPath>$(SolutionDir)..\..\lib\Pao.Reports.Azure.dll</HintPath>
+</Reference>
+<Reference Include="Pao.Reports.Azure" Condition="Exists('$(ProgramFiles) (x86)\Pao@Office\Reports.net\Pao.Reports.Azure.dll')">
       <HintPath Condition="Exists('$(ProgramFiles) (x86)')">$(ProgramFiles) (x86)\Pao@Office\Reports.net\Pao.Reports.Azure.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
